[project]
name = "prompty"
version = ["version"]
description = "Default template for PDM package"
authors = [
    {name = "Seth Juarez",email = "seth.juarez@microsoft.com"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "pydantic>=2.8.2",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
serverless = [
    "azure-ai-inference>=1.0.0b3",
]
azure = [
    "azure-identity>=1.17.1",
    "openai>=1.43.0",
]
openai = [
    "openai>=1.43.0",
]


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
tag_filter = "python/*"
tag_regex = '^python/(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'

[tool.pdm.scripts]
prompty = { call = "prompty.cli:run" }

[tool.pdm.dev-dependencies]
dev = [
    "openai>=1.43.0",
]
[project.scripts]
prompty = "prompty.cli:run"