[project]
name = "prompty"
dynamic = ["version"]
readme = "README.md"
description = "Prompty is an asset class and format for LLM prompts"
authors = [{ name = "Seth Juarez", email = "seth.juarez@microsoft.com" }]
requires-python = ">=3.11"

license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.1",
  "aiofiles>=24.1.0",
]

[project.urls]
Homepage = "https://prompty.ai"
Repository = "https://github.com/Microsoft/prompty"
Documentation = "https://prompty.ai"
Issues = "https://github.com/microsoft/prompty/issues"
Changelog = "https://github.com/microsoft/prompty/releases"

[project.optional-dependencies]
jinja2 = ["jinja2"]
mustache = ["chevron"]
openai = ["openai"]
foundry = ["openai", "azure-identity"]
azure = ["openai", "azure-identity"]
anthropic = ["anthropic"]
otel = ["opentelemetry-api>=1.20"]
all = [
  "jinja2",
  "chevron",
  "openai",
  "azure-identity",
  "anthropic",
  "opentelemetry-api>=1.20",
]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "ruff",
  "types-PyYAML",
  "types-aiofiles",
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
]

[tool.ruff]
line-length = 120
target-version = "py311"
output-format = "full"

# Entry points for invoker discovery
[project.entry-points."prompty.renderers"]
jinja2 = "prompty.renderers.jinja2:Jinja2Renderer"
mustache = "prompty.renderers.mustache:MustacheRenderer"

[project.entry-points."prompty.parsers"]
prompty = "prompty.parsers.prompty:PromptyChatParser"

[project.entry-points."prompty.executors"]
openai = "prompty.providers.openai.executor:OpenAIExecutor"
foundry = "prompty.providers.foundry.executor:FoundryExecutor"
azure = "prompty.providers.foundry.executor:FoundryExecutor"
anthropic = "prompty.providers.anthropic.executor:AnthropicExecutor"

[project.entry-points."prompty.processors"]
openai = "prompty.providers.openai.processor:OpenAIProcessor"
foundry = "prompty.providers.foundry.processor:FoundryProcessor"
azure = "prompty.providers.foundry.processor:FoundryProcessor"
anthropic = "prompty.providers.anthropic.processor:AnthropicProcessor"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/test_otel.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
  "integration: tests that hit real OpenAI / Azure OpenAI endpoints (deselected by default)",
]
addopts = "-m 'not integration'"

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"
