[package]
name = "prompty-anthropic"
version = "2.0.0-alpha.11"
edition = "2024"
rust-version = "1.85"
description = "Anthropic provider for Prompty — Claude Messages API executor and processor"
license = "MIT"
repository = "https://github.com/microsoft/prompty"
documentation = "https://docs.rs/prompty-anthropic"
readme = "README.md"
keywords = ["llm", "prompt", "anthropic", "claude", "ai"]
categories = ["development-tools"]

[dependencies]
prompty = { version = "2.0.0-alpha.11", path = "../prompty" }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serial_test = "3"
