[package]
name = "prompty-foundry"
version = "0.1.0"
edition = "2021"
description = "Azure OpenAI / Foundry provider for Prompty"
license = "MIT"

[dependencies]
prompty = { path = "../prompty" }
prompty-openai = { path = "../prompty-openai" }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
