[package]
name = "prompty-foundry"
version = "2.0.0-beta.2"
edition = "2024"
rust-version = "1.85"
description = "Azure OpenAI / Foundry provider for Prompty"
license = "MIT"
repository = "https://github.com/microsoft/prompty"
documentation = "https://docs.rs/prompty-foundry"
readme = "README.md"
keywords = ["llm", "prompt", "azure", "openai", "foundry"]
categories = ["development-tools"]

[dependencies]
prompty = { version = "2.0.0-beta.2", path = "../prompty" }
prompty-openai = { version = "2.0.0-beta.2", path = "../prompty-openai" }
async-trait = "0.1"
azure_identity = { version = "0.23", optional = true }
azure_core = { version = "0.23", optional = true }
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = []
entra_id = ["azure_identity", "azure_core"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serial_test = "3"
