[package]
name = "prompty-openai"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "OpenAI provider for Prompty"
license = "MIT"

[dependencies]
prompty = { path = "../prompty" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
