[package]
name = "prompty"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Prompty is an asset class and format for LLM prompts"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
minijinja = "2"
rand = "0.9"
regex = "1"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
