[package]
name = "prompty"
version = "2.0.0-alpha.11"
edition = "2024"
rust-version = "1.85"
description = "Prompty is an asset class and format for LLM prompts"
license = "MIT"
repository = "https://github.com/microsoft/prompty"
documentation = "https://docs.rs/prompty"
readme = "README.md"
keywords = ["llm", "prompt", "ai", "template", "agent"]
categories = ["development-tools", "text-processing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "fs", "rt", "time", "macros"] }
minijinja = "2"
rand = "0.9"
regex = "1"
chrono = "0.4"
ribboncurls = "0.2"
futures = "0.3"

# OTel (optional)
opentelemetry = { version = "0.29", optional = true }
opentelemetry_sdk = { version = "0.29", optional = true }
opentelemetry-stdout = { version = "0.29", features = ["trace"], optional = true }

[features]
default = []
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-stdout"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serial_test = "3"
