[project]
name = "prompty-docs-examples"
version = "0.1.0"
description = "Tested code examples for Prompty documentation"
requires-python = ">=3.11"
dependencies = [
    "prompty[all]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
